--- a/style.css
+++ b/style.css
@@ -3,13 +3,38 @@
   padding: 20px;
   gap: 10px;
 }
+h1 {
+  font-size: 60px;
+  text-align: center;
+  background-color: rgba(231, 154, 10, 0.658);
+}
+img {
+  display: block;
+  margin: 100 auto;
+  border: 10px solid rgba(231, 154, 1, 0.589);
+  float:right
+}
+
 .personal_data {
-  background-color: rgba(44, 44, 44, 0.781);
+  background-color: rgb(63, 61, 61);
   width: 40%;
 }
 
 .profile {
-  background-color: rgb(255, 189, 82);
+  background-color: rgba(231, 154, 1, 0.589);
   padding: 30px;
   width: 60%;
+}
+html {
+  background-color: #6e6f70;
+}
+body {
+  
+  margin: 0 auto;
+  border: 10px solid rgb(192, 135, 13);
+}
+h2 {
+  font-size: 25px;
+  text-align: left;
+  background-color: rgba(231, 154, 1, 0.658);
 }
